package com.logmate.agentConfig.dto;

import lombok.Data;


@Data
public class AgentConfig {
    private String agentId;
    private String accessToken;
    private String etag;
}
